apps/hasadna/templates/kopia_backups_validator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kopia-backups-validator
spec:
  selector:
    matchLabels:
      app: kopia-backups-validator
  replicas: 1
  template:
    metadata:
      labels:
        app: kopia-backups-validator
    spec:
      terminationGracePeriodSeconds: 1
      volumes:
      - name: html
        emptyDir: {}
      containers:
      - name: nginx
        # Pulled on May 20, 2025
        image: nginx@sha256:fb39280b7b9eba5727c884a3c7810002e69e8f961cc373b89c92f14961d903a0
        resources:
          requests:
            cpu: 20m
            memory: 32Mi
          limits:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
