apps/hasadna/templates/out-of-order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: out-of-order
spec:
  selector:
    app: out-of-order
  ports:
  - name: "80"
    port: 80
