apps/hasadna/templates/redirector-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redirector-nginx
spec:
  selector:
    app: redirector-nginx
  ports:
  - name: "80"
    port: 80
